feat: add basic components and models

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,6 +48,7 @@
             "code": 140
           }
         ],
+        "import/prefer-default-export": "off",
         "no-console": "off"
       }
     },
