--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build  --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "npx eslint \"src/**/*.{js,jsx,ts,tsx,html,css,scss}\" --fix"
+    "lint": "npx eslint \"src/**/*.{js,jsx,ts,tsx,html}\" --fix"
   },
   "private": true,
   "dependencies": {
@@ -28,7 +28,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.3",
+    "@angular-devkit/build-angular": "^13.3.1",
     "@angular-eslint/builder": "13.1.0",
     "@angular-eslint/eslint-plugin": "13.1.0",
     "@angular-eslint/eslint-plugin-template": "13.1.0",
