--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,9 @@
           }
         ],
         "import/prefer-default-export": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "max-classes-per-file": "off",
+        "@typescript-eslint/default-param-last": "off"
       }
     },
     {
