--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@mui/icons-material": "^5.5.1",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^13.1.0",
+    "@ngrx/router-store": "^13.1.0",
+    "@ngrx/store": "^13.1.0",
+    "@ngrx/store-devtools": "^13.1.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
