feat: add response redux structure

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "^2.6.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "eslint-plugin-ngrx": "^2.0.0"
   }
 }
