--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,10 @@
         ],
         "createDefaultProgram": true
       },
-      "plugins": ["@typescript-eslint", "import"],
+      "plugins": [
+        "@typescript-eslint",
+        "import"
+      ],
       "extends": [
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
@@ -62,6 +65,17 @@
         "plugin:@angular-eslint/template/recommended"
       ],
       "rules": {}
+    },
+    {
+      "files": [
+        "*.ts"
+      ],
+      "extends": [
+        "plugin:ngrx/recommended"
+      ],
+      "rules": {
+        "ngrx/prefer-action-creator-in-dispatch": "off"
+      }
     }
   ]
 }
